fix flags alignment

--- a/static/less/ureport2.less
+++ b/static/less/ureport2.less
@@ -2379,6 +2379,7 @@ ul.poll-filters, .featured-stories-filters, ul.stories-filters {
 }
 
 .welcome-flags-global {
+  margin-top: 30px;
 
   a.flag {
     display: inline-block;
@@ -2390,8 +2391,7 @@ ul.poll-filters, .featured-stories-filters, ul.stories-filters {
       display: block;
       margin-left: auto;
       margin-right: auto;
-      margin-top: 15px;
-
+      
     }
   }
 
